# GIS-AutoCAD-Integration-Tool

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scratch_out.txt
.claude/: settings.json
build_debug/GIS_AutoCAD_Tool_Debug/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-GIS_AutoCAD_Tool_Debug.txt  xref-GIS_AutoCAD_Tool_Debug.html
scripts/: build_exe.py  cli_run.py
src/: main.py
src/application/: exceptions.py  progress.py
src/application/dto/: merge_options.py  merge_result.py  parcel_record.py  processing_stats.py  search_result.py  slot_assignment.py
src/application/ports/: column_mapper_port.py  data_sink_port.py  data_source_port.py  output_file_source_port.py
src/application/use_cases/: compute_stats_use_case.py  export_final_file_use_case.py  merge_parcels_use_case.py  search_holdings_use_case.py
src/domain/: exceptions.py
src/domain/entities/: basin.py  borders.py  holder.py  parcel.py
src/domain/services/: area_calculator.py  (+2 more)
src/infrastructure/: logging_setup.py
src/presentation/: app_window.py  fonts.py  search_window.py
src/shared/: arabic_normalizer.py  font_availability.py  fuzzy_matcher.py  paths.py
tests/integration/: conftest.py  test_base_file_reader.py  test_drop_zone.py  test_join_key_normalization.py  test_main_viewmodel.py  test_main_window_threading.py  test_mapped_file_reader.py  test_output_file_reader.py  test_professional_excel_writer.py  test_search_viewmodel.py  test_secondary_file_reader.py  test_secondary_file_reader_exclusion_toggle.py
(+72 files in other folders)
