[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-autocad-tool"
version = "0.1.0"
description = "Consolidates, cleans, spatially sorts, and exports agricultural land-holding data for AutoCAD/GIS workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "customtkinter>=5.2",
    "tkinterdnd2>=0.3.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "rapidfuzz>=3.6",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.4",
    "isort>=5.13",
    "pre-commit>=3.7",
    "pyinstaller>=6.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/domain", "src/application"]
